changes to package json for test deployment

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "portfolio_nextjs",
+  "homepage": "https://kikig13.github.io/portfolio",
+  "name": "portfolio-kian",
   "version": "0.1.0",
   "private": true,
   "scripts": {
