--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "portfolio_nextjs",
+  "homepage": "https://kikig13.github.io/Portfolio/",
+  "name": "portfolio-kian",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,6 +9,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "gh-pages": "^3.2.3",
     "next": "10.2.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
