--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://KikiG13.github.io/Portfolio/",
-  "name": "portfolio-kian",
+  "name": "portfolio_website",
   "version": "0.1.0",
   "private": true,
   "scripts": {
